<resources>
    <string name="app_name">ProyectoAndroid</string>
    <string name="mymovielist">MyMovieList!</string>
    <string name="inicioSesion">Iniciar Sesión</string>
    <string name="registrarme">Registrarme</string>
    <string name="ususario">Correo</string>
    <string name="password">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Configuración</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_nuevo">Nuevo</string>
    <string name="Título">Mi lista</string>
    <string name="Subtítulo">Chupi</string>
    <string name="email">Email</string>
    <string name="Enviar">Enviar</string>
    <string name="actual">Contraseña actual</string>
    <string name="nueva">Nueva contraseña</string>
    <string name="action_cambio">Cambiar contraseña</string>
    <string name="titulo">Titulo</string>
    <string name="duracion">Duración</string>
    <string name="Protagonista">Protagonista</string>
    <string name="add">Añadir</string>
    <string name="todas">Ver todas</string>
    <string name="action_cuenta">Mi cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="usuario_editar_titulo">Editar Usuario</string>
    <string name="usuario_editar_confirmacion">Usuario modificada</string>
    <string name="menu_editar">Editar</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="boton_guardar">Guardar</string>
    <string name="preferencias">Preferencias</string>
    <string name="configuracion">Configuración</string>
    <string name="reproducir_musica">Reproducir música</string>
    <string name="reproducir_video">Reproducir video</string>
    <string name="guardar">Guardar</string>
    <string name="idiomaAplicacion">Idioma de la Aplicación</string>
    <string name="idioma">Idioma</string>
    <string name="origenDatos">Origen de los datos</string>
    <string name="origenDatosActuales">Origen de datos actualmente</string>
    <string name="labelZoom">Zoom:</string>
    <string name="addMiLista">Añadir pelicula a MI LISTA</string>
    <string name="musica">Música</string>
    <string name="escucharMusica">Escuchar la música mientras se ejecuta la aplicación</string>
    <string name="indicarIdioma">Indicar idioma de la aplicación</string>
    <string name="IndicarOrigen">Indicar origen de los datos</string>
    <string name="nick">Nick por defecto</string>
    <string name="introducirNick">Introduzca su nick por defecto</string>
    <string name="tipoLetra">Tipo de letras de los formularios</string>
    <string name="IndicarLetra">Indicar el tipo de letra</string>
    <string name="colorBotones">Color de fondo de los botones</string>
    <string name="eligeColorBotones">Elige el color de fondo de los botones</string>
    <string name="IndicarColorFondo">Indicar color de fondo</string>
    <string name="navigation_drawer_open">Abrir menú navegación</string>
    <string name="navigation_drawer_close">Cerrar menú navegación</string>
    <string name="nav_header_title">Peliculas</string>
    <string name="nav_header_subtitle">pelis</string>
    <string name="nav_header_desc">Cabecera</string>
    <string name="menu_home">Home</string>
    <string name="settings">Configuracion</string>
    <string name="menu_gallery">Galeria</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="action_mapa">Consultar Cines</string>
    <string name="action_retrofit">Fecha</string>
    <string name="clave">Cambio contraseña</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="open">Abrir</string>
    <string name="close">Cerrar</string>
    <string name="cargar_fecha">Cargar Fecha</string>
    <string name="fechaTitulo">Consultar Fecha</string>
    <string name="fecha">Fecha:</string>
    <string name="consulta">Estado de la consulta</string>
    <string name="firebase">Firebase</string>
    <string name="usuario">nombre</string>
    <string name="userFirebase">Usuario Firebase</string>

</resources>