<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cartel"
    tools:context=".activities.InicioActivity">

    <include
        android:id="@+id/appbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/textView"
        style="@style/TxtBienvenida.Cabecera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:background="@drawable/radius_azul"
        android:text="@string/mymovielist"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/appbar"
        app:layout_constraintVertical_bias="0.076" />

    <Button
        android:id="@+id/btnInicioSesion"
        style="@style/BotonesNormal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/inicioSesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
         />


    <Button
        android:id="@+id/btnRegistro"
        style="@style/BotonesNormal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/registrarme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnInicioSesion"
         />

    <Button
        android:id="@+id/btnFirebase"
        style="@style/BotonesNormal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/firebase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnRegistro"
         />

</androidx.constraintlayout.widget.ConstraintLayout>