<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".activities.LoginActivity">

    <include android:id="@+id/appbar"
        layout="@layout/toolbar" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#4DFFFFFF"
        android:hint="@string/actual"
        android:id="@+id/edtVieja"
        android:textColor="@color/blanco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#4DFFFFFF"
        android:hint="@string/nueva"
        android:id="@+id/edtNueva"
        android:inputType="textPassword"
        android:textColor="@color/blanco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edtVieja"
        app:layout_constraintVertical_bias="0.365" />

    <Button
        android:id="@+id/btnEnviar"
        style="@style/BotonesNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edtNueva"
        app:layout_constraintVertical_bias="0.625" />

</androidx.constraintlayout.widget.ConstraintLayout>