<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".activities.FirebaseActivity">

    <include
        android:id="@+id/appbar"
        layout="@layout/toolbar" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButtonEntrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:buttonTint="@color/colorPrimary"
            android:checked="true"
            android:padding="10dp"
            android:text="iniciar"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:buttonTint="@color/colorAccent"
            android:padding="10dp"
            android:text="registrar"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="email@gmail.com"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:textColor="@color/blanco"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtoUsuario" />

    <TextView
        android:id="@+id/txtoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/email"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinnne3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.37" />

    <TextView
        android:id="@+id/txtClave"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_weight="1"
        android:gravity="left"
        android:padding="5dp"
        android:text="@string/password"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelinnne3" />

    <EditText
        android:id="@+id/editTextClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:gravity="center"
        android:hint="******"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/blanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtClave" />

    <TextView
        android:id="@+id/txtRequisitos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Requisitos"
        android:textColor="#FF0000"
        android:textSize="13sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/editTextClave"
        app:layout_constraintTop_toBottomOf="@+id/editTextClave" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="385dp" />

    <TextView
        android:id="@+id/txtoNombre"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_weight="1"
        android:gravity="left"
        android:padding="5dp"
        android:text="@string/nombre"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <EditText
        android:id="@+id/editoNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="@color/blanco"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtoNombre" />

    <!--<TextView
        android:id="@+id/txtEdad"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/edad"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtNick" />
    <EditText
        android:id="@+id/editTextEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:ems="10"
        android:gravity="center"
        android:hint="Edad"
        android:inputType="number"
        android:padding="5dp"
        android:textColor="#40A634"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/txtEdad"
        app:layout_constraintTop_toBottomOf="@id/editTextNick" />-->

    <Button
        android:id="@+id/btAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:text="@string/inicioSesion"
        style="@style/BotonesNormal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editoNombre"
        app:layout_constraintVertical_bias="0.759" />

    <!--<TextView
        android:id="@+id/txtAceptar"
        android:layout_width="167dp"
        android:layout_height="111dp"
        android:gravity="center"
        android:rotationX="25"
        android:text="@string/iniciar"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="@+id/btAceptar"
        app:layout_constraintEnd_toEndOf="@+id/btAceptar"
        app:layout_constraintStart_toStartOf="@+id/btAceptar"
        app:layout_constraintTop_toTopOf="@+id/btAceptar" />-->

</androidx.constraintlayout.widget.ConstraintLayout>